First commit for specific presentation

--- a/styles/style.css
+++ b/styles/style.css
@@ -103,7 +103,7 @@ BODY {
 	border-bottom:0.1em solid;
 	color:#0174A7;
 	text-decoration:none;
-	padding:20px 10px 10px 10px;
+	padding:5px 10px;
 	}
 .step a[target=_blank] {
 	margin-right:22px;
